# dots

./: .bashrc  .commands  .gitconfig  .gitmodules  .inputrc  .npmrc  .profile  .zshenv  .zshrc  README.md  bashrc  com.googlecode.iterm2.plist  install.sh  installs.sh  kitsune  kitty.conf
bash/: README.md  bashrc  bashrc.bash  functions.bash  keybindings.bash  modes.bash  modes.sh  prelude.sh
bash/lib/: dev_utils.sh  emacs.sh  loggers.sh  misc.sh  os_utils.sh  slicing.sh
bash/to_refactor/: dev_utils.sh  emacs.sh  misc.sh  posix.bash
c/now/: Makefile  main.c
deno/: ,gpt  .env.example  =  Agent.ts  util.ts
dotfiles/: .gitconfig
dotfiles/.config/fcitx/: config
dotfiles/.config/terminator/: config
install/: apt.py  util.py
misc/: dex.desktop  macosx_vbox.sh
misc/docker/: ielixir.yml
misc/gtk-3.0/: gtk-widgets.css
misc/keymap/: .Xmodmap  README.md  custom-xkb-keymap  normal-xkb-keymap
misc/save-as-shortcut/: background.js  content.js  manifest.json
misc/xmodmap/: 80_xmodmap
node/: ,node  babel.config.js  package-lock.json  package.json
python/envify/: envify.py  pyproject.toml
python/notebooks/: .gitignore  Pipfile  Untitled1.ipynb  custom_config.yml  graph.ipynb  interact_jam.ipynb  numbers.ipynb  pyproject.toml  rc.ipynb  untitled.txt
python/notebooks/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  interact_jam-checkpoint.ipynb  rc-checkpoint.ipynb
python/notebooks/.ipython/profile_default/: history.sqlite  ipython_config.py  ipython_kernel_config.py
python/notebooks/.ipython/profile_default/startup/: rc.py
python/notebooks/.jupyter/lab/user-settings/@jupyterlab/shortcuts-extension/: shortcuts.jupyterlab-settings
python/notebooks/.jupyter/lab/workspaces/: default-37a8.jupyterlab-workspace
python/notebooks/config/: custom.css  custom.js  matplotlibrc
python/notebooks/meera/: it.py  numbers.py  table.py
python/notebooks/misc/: inverse.ipynb  spiral.ipynb  table.ipynb
python/utils/: pyproject.toml
zsh/: README.md  functions.zsh  keybindings.zsh  kitsune.zsh  location.zsh  zprofile.zsh  zshenv.zsh  zshrc.zsh
(+3 files in other folders)
